# aoc_2023

./: README.md  justfile  pyproject.toml  style.mplstyle
.github/workflows/: python-app.yml  python_CI.yml  spelling.yaml
src/aoc_2023/: __init__.py  test_utils.py  utils.py
src/aoc_2023/day01/: day01.py  test_day01.py
src/aoc_2023/day02/: day02.py  test_day02.py
src/aoc_2023/day03/: day03.py  test_day03.py
src/aoc_2023/day04/: day04.py  test_day04.py
src/aoc_2023/day05/: day05.py  test_day05.py
src/aoc_2023/day06/: day06.py  test_day06.py
src/aoc_2023/day07/: day07.py  test_day07.py
src/aoc_2023/day08/: day08.py  test_day08.py
src/aoc_2023/day09/: day09.py  test_day09.py
src/aoc_2023/day10/: day10.py  test_day10.py
src/aoc_2023/day11/: day11.py  test_day11.py
src/aoc_2023/day12/: day12.py  test_day12.py
src/aoc_2023/day13/: day13.py  test_day13.py
src/aoc_2023/day15/: day15.py  test_day15.py
src/aoc_2023/day17/: day17.py
src/aoc_2023/day18/: day18.py  test_day18.py
src/aoc_2023/day19/: day19.py
src/aoc_2023/day21/: day21.py  test_day21.py
src/aoc_2023/day23/: day23.py  test_day23.py
src/aoc_2023/day24/: day24.py  test_day24.py
src/aoc_2023/day25/: day25.py
src/aoc_2023/oldday01/: day01.py  test_day01.py
