[project]
name = "aoc-2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nate McIntosh", email = "natemcintosh@gmail.com" }
]
dependencies = [
    "more-itertools>=10.1.0",
    "tqdm>=4.66.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "ipython>=8.12.3",
    "ruff>=0.1.6",
    "black>=23.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true
