[project]
name = "aoc-2023"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nate McIntosh", email = "natemcintosh@gmail.com" }]
requires-python = ">=3.12.1"
dependencies = [
    "matplotlib>=3.10.1",
    "more-itertools>=10.7.0",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "polars>=1.29.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipython>=9.2.0", "pytest>=8.3.5", "ruff>=0.11.8"]

[tool.ruff]
line-length = 88
